<?xml version="1.0"?>
    <package format="2">
    <name>ddynamic_reconfigure</name>
    <version>1.0.0</version>
    <description>The ddynamic_reconfigure package</description>

    <maintainer email="theNODO55@gmail.com">Noam Dori</maintainer>

    <license>BSD</license>

    <!-- <url type="website">http://wiki.ros.org/ddynamic_reconfigure</url> -->

    <author email="theNODO55@gmail.com">Noam Dori</author>
    <author email="hilario.tome@pal-robotics.com">Hilario Tome</author>
    <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>
        
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>

    <test_depend>rostest</test_depend>
    <test_depend>gmock</test_depend>
</package>
